--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 ### your site title here
-title: Lorenzo Carnevale
-description: Assistant Professor at University of Messina
+title: Apurba Pokharel
+description: PhD student at the University of North Texas
 
 baseurl: "" #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
-email: lcarnevale@unime.it
+email: apurbapokharel@my.unt.edu
 
 highlighter: rouge
 markdown: kramdown
@@ -17,14 +17,14 @@ markdown: kramdown
 # Social media links in footer
 # facebook: "#"
 # twitter: "#"
-linkedin: "lorenzocarnevale"
-github: "lcarnevale"
+linkedin: "apurba-pokharel-17646a163"
+github: "apurbapokharel"
 # researchgate: "#"
-orcid: "0000-0002-1349-341X"
-google_analytics: "G-V0TBR5PTVH"
-scopus: "57195963279"
-google_scholar: "_5EzmTwAAAAJ&hl=it"
-flickr: "lorenzocarnevale"
+# orcid: "0000-0002-1349-341X"
+# google_analytics: "G-V0TBR5PTVH"
+# scopus: "57195963279"
+google_scholar: "U84qyqcAAAAJ&hl=en&oi=ao"
+# flickr: "lorenzocarnevale"
 
 
 # highlighter: rouge
