--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ### your site title here
 title: Apurba Pokharel
-description: PhD student at the University of North Texas
+description: Student at life
 
 baseurl: "" #name of GitHub repository
 url: "" #custom url to be used instead of GitHub repository
